// Connexion à PostgreSQL
datasource db {
  provider = "postgresql"
}

// Générateur du client Prisma
generator client {
  provider = "prisma-client-js"
}

// Table des utilisateurs (compte de connexion)
model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  nom       String
  prenom    String
  createdAt DateTime @default(now())

  clients  Client[]
  devis    Devis[]
  factures Facture[]
}

// Table des clients
model Client {
  id        Int      @id @default(autoincrement())
  nom       String
  prenom    String
  email     String?
  telephone String?
  entreprise String?
  adresse   String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  userId Int
  user   User  @relation(fields: [userId], references: [id])

  devis    Devis[]
  factures Facture[]
}

// Table des devis
model Devis {
  id          Int      @id @default(autoincrement())
  numero      String   @unique
  statut      String   @default("brouillon") // brouillon, envoyé, accepté, refusé
  dateEmission DateTime @default(now())
  dateEcheance DateTime?
  totalHT     Float    @default(0)
  totalTTC    Float    @default(0)
  tva         Float    @default(20)
  notes       String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  userId   Int
  user     User   @relation(fields: [userId], references: [id])

  clientId Int
  client   Client @relation(fields: [clientId], references: [id])

  lignes LigneDevis[]
  
  facture Facture?
}

// Table des lignes de devis (les produits/services dans un devis)
model LigneDevis {
  id          Int    @id @default(autoincrement())
  description String
  quantite    Float
  prixUnitaire Float
  total       Float

  devisId Int
  devis   Devis @relation(fields: [devisId], references: [id], onDelete: Cascade)
}

// Table des factures
model Facture {
  id           Int      @id @default(autoincrement())
  numero       String   @unique
  statut       String   @default("en_attente") // en_attente, payee, en_retard
  dateEmission DateTime @default(now())
  dateEcheance DateTime
  totalHT      Float    @default(0)
  totalTTC     Float    @default(0)
  tva          Float    @default(20)
  notes        String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  userId   Int
  user     User   @relation(fields: [userId], references: [id])

  clientId Int
  client   Client @relation(fields: [clientId], references: [id])

  devisId  Int?     @unique
  devis    Devis?   @relation(fields: [devisId], references: [id])

  lignes LigneFacture[]
}

// Table des lignes de factures
model LigneFacture {
  id           Int    @id @default(autoincrement())
  description  String
  quantite     Float
  prixUnitaire Float
  total        Float

  factureId Int
  facture   Facture @relation(fields: [factureId], references: [id], onDelete: Cascade)
}
